2008-02-27  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Custom containers section: 
	Mention that pick() should pick each of its children, and refer to 
	the Custom Actor section for more details. However, I do not actually 
	have those details yet.

2008-02-26  Murray Cumming, <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Custom containers section:
	Mentioned overriding ClutterActor::paint() to paint children.
	* docs/tutorial/figures/Makefile.am: Added a screenshot of the custom 
	container.
	* examples/custom_container/examplebox.c: Do not implement 
	ClutterActor::pick() because it is not necessary for a simple example.

2008-02-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Custom Containers section:
	mention vfuncs for doing layout of children.
	* examples/custom_container/examplebox.c:
	(example_box_query_coords), (example_box_request_coords),
	(layout_children):
	* examples/custom_container/examplebox.h:
	* examples/custom_container/main.c: Do not ignore the provided x1 and 
	y1 for the container.

2008-02-25  Murray Cumming  <murrayc@murrayc.com>

	* examples/custom_container/examplebox.c:
	* examples/custom_container/main.c:
	Improve the implementation, iterating over the children every time we 
	should relayout the children.
	But the position of the container itself always seems to be 0. Possibly 
	I do not understand allocation/position or both.

2008-02-25  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/tutorial/clutter-tut.xml:
	* docs/tutorial/figures/Makefile.am:
	* examples/custom_container/Makefile.am:
	* examples/custom_container/examplebox.c:
	* examples/custom_container/examplebox.h:
	* examples/custom_container/main.c: Very cut-down version of 
	the old ClutterHBox container. Needs more work to make it behave 
	properly and be easier to understand.

2008-02-22  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/tutorial/clutter-tut.xml: